<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Books Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_item">Edit Title</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>


    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>
    <string name="error_saving">Error with saving pet</string>
    <string name="pet_saved">Pet saved with row id:</string>
    <string name="row_initemdb">Number of rows in items database table:</string>

    <string name="empty_view_title_text">Looks Like the Books Have Gone To The Dogs!</string>
    <string name="add_a_book">Add A Book</string>
    <string name="edit_book">Edit A Book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <string name="error_while_deleting_books">Error While Deleting Books</string>
    <string name="all_books_deleted">All Books Deleted</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name ="editor_insert_book_failed"> Insertion of Book Failed</string>
    <string name="editor_insert_book_successful">Insertion of Book Successful</string>

    <string name="editor_update_book_failed">Update to Book Failed</string>
    <string name="editor_update_book_successful">Update to Book Successful</string>

<string name ="editor_delete_book_failed">Deletion of Book Failed</string>
<string name="editor_delete_book_successful">Deletion of Book Successful</string>
    <string name="price">Price</string>
    <string name="price_hint">price</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_name_hint">supplier name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="supplier_phone_number_hint">supplier phone number</string>
    <string name="quantity_xml">Quantity:</string>
    <string name="no_less_than_0_message">Quantity Can\'t be less than 0.</string>
    <string name="tel_text">Supplier Phone Number</string>
    <string name="editor_activity_title_new_item">Title of New Item</string>

    <string name="product_name">Book Name</string>
    <string name="book_name_hint">book name</string>
    <string name="button_sale">Buy Now!</string>
    <string name="delete_all">Delete All</string>
    <string name="button_call">Call Supplier</string>
    <string name="negative_quantity">You cannot have a negative quantity.</string>
    <string name="delete_dialog_msg">Click on Delete</string>
    <string name="cancel">Cancel the Deletion</string>


</resources>
